--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
-        "materialize-css": "^1.0.0-rc.2",
+        "materialize-css": "^1.0.0",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "chart.js": "^2.8.0",
+        "moment": "^2.24.0",
+        "toastr": "^2.1.4",
+        "vue-sweetalert2": "^1.6.4"
     }
 }
