--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+APP_TIMEZONE='America/Bogota'
+APP_LOCALE=es
+APP_FALLBACK_LOCALE=es
+APP_FAKER_lOCALE=es_ES
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
