--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     },
     "dependencies": {
         "chart.js": "^2.8.0",
+        "laravel-echo": "^1.5.3",
         "moment": "^2.24.0",
+        "pusher-js": "^4.4.0",
         "select2": "^4.0.7-rc.0",
         "toastr": "^2.1.4",
         "vue-form-wizard": "^0.8.4",
