--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^1.0",
         "pusher/pusher-php-server": "~3.0",
         "spatie/laravel-permission": "^2.37",
-        "tymon/jwt-auth": "^1.0.0"
+        "tymon/jwt-auth": "^1.0.0",
+        "yajra/laravel-datatables-oracle": "^9.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
