--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "pusher/pusher-php-server": "~3.0",
+        "realrashid/sweet-alert": "^1.1",
         "spatie/laravel-permission": "^2.37",
         "tymon/jwt-auth": "^1.0.0",
-        "uxweb/sweet-alert": "^2.0",
         "yajra/laravel-datatables-oracle": "^9.3"
     },
     "require-dev": {
