--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,3 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/libs.css": "/css/libs.css",
-    "/js/libs.js": "/js/libs.js",
-    "/js/app2.js": "/js/app2.js"
+    "/js/app.js": "/js/app.js"
 }
