Se logró el registro de ingresos de visitantes

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
+        "javascript-obfuscator": "^0.18.1",
         "jquery": "^3.4.1",
         "laravel-mix": "^4.0.16",
         "lodash": "^4.17.5",
@@ -24,7 +25,8 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-router": "^3.0.6",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "webpack-obfuscator": "^0.18.3"
     },
     "dependencies": {
         "chart.js": "^2.8.0",
