--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "realrashid/sweet-alert": "^1.1",
         "spatie/laravel-permission": "^2.37",
         "tymon/jwt-auth": "^1.0.0",
-        "yajra/laravel-datatables-oracle": "^9.3"
+        "yajra/laravel-datatables": "1.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
