solucion errores laboratorios e implementacion vistas errores

--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,13 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=gestion
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
+
+DB_DATABASE_TEST=gestion_test
+DB_USERNAME_TEST=
+DB_PASSWORD_TEST=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
