registro de materiales con registro de tablas maestras por select tags y estrucutracion de seeder materiales

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ DB_PORT=3306
 DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
+CHARSET=utf8
+COLLATION=utf8_spanish_ci
 
 DB_DATABASE_TEST=gestion_test
 DB_USERNAME_TEST=
