--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,3 @@
 {
-    "/js/app.js": "/js/app.js?id=7fe877ec2cc7afa620b9",
-    "/js/app.min.js": "/js/app.min.js?id=7fe877ec2cc7afa620b9",
-    "/css/libs.css": "/css/libs.css?id=71f00b4cde1991be0925",
-    "/css/libs.min.css": "/css/libs.min.css?id=71f00b4cde1991be0925",
-    "/js/libs.js": "/js/libs.js?id=c2856b9da08be274e62a",
-    "/js/libs.min.js": "/js/libs.min.js?id=c2856b9da08be274e62a",
-    "/js/app2.js": "/js/app2.js?id=c9dfeea32773fb6f09aa",
-    "/js/app2.min.js": "/js/app2.min.js?id=c9dfeea32773fb6f09aa"
+    "/js/app.js": "/js/app.js"
 }
