--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,10 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=gestion@redtecnoparquecolombia.com
+MAIL_FROM_NAME='Ana de Red Tecnoparque Colombia'
+MAIL_FROM_SUPPORT_ADDRESS=infotecnocolombia@gmail.com
+MAIL_FROM_SUPPORT_NAME='Equipo de soporte Red Tecnoparque Colombia'
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
