--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,10 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=e564fd8442c9f0b1140d",
+    "/js/app.min.js": "/js/app.min.js?id=e564fd8442c9f0b1140d",
+    "/css/libs.css": "/css/libs.css?id=71f00b4cde1991be0925",
+    "/css/libs.min.css": "/css/libs.min.css?id=71f00b4cde1991be0925",
+    "/js/libs.js": "/js/libs.js?id=b84f09ff751ad0a5f073",
+    "/js/libs.min.js": "/js/libs.min.js?id=b84f09ff751ad0a5f073",
+    "/js/app2.js": "/js/app2.js?id=0afae8c3aa844330e3c3",
+    "/js/app2.min.js": "/js/app2.min.js?id=0afae8c3aa844330e3c3"
 }
