--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,3 @@
 {
-    "/js/app.js": "/js/app.js?id=0736e46fd1908abae40b",
-    "/js/app.min.js": "/js/app.min.js?id=0736e46fd1908abae40b",
-    "/css/libs.css": "/css/libs.css?id=c4d26f779a81a6c9af03",
-    "/css/libs.min.css": "/css/libs.min.css?id=c4d26f779a81a6c9af03",
-    "/js/libs.js": "/js/libs.js?id=21da4ea90e5bbfafe4b7",
-    "/js/libs.min.js": "/js/libs.min.js?id=21da4ea90e5bbfafe4b7",
-    "/js/app2.js": "/js/app2.js?id=a0fd04702e8c0ce9241b",
-    "/js/app2.min.js": "/js/app2.min.js?id=a0fd04702e8c0ce9241b",
-    "/js/web.js": "/js/web.js?id=e78e715a3c7e999f1b75"
+    "/js/app.js": "/js/app.js"
 }
