--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,11 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=fcaa66b675782a27a83c",
+    "/js/app.min.js": "/js/app.min.js?id=fcaa66b675782a27a83c",
+    "/css/libs.css": "/css/libs.css?id=09b9b3848ff8d443713b",
+    "/css/libs.min.css": "/css/libs.min.css?id=09b9b3848ff8d443713b",
+    "/js/libs.js": "/js/libs.js?id=4b13c0ed75957f978585",
+    "/js/libs.min.js": "/js/libs.min.js?id=4b13c0ed75957f978585",
+    "/js/app2.js": "/js/app2.js?id=f3ec76b2ab6eb570c498",
+    "/js/app2.min.js": "/js/app2.min.js?id=f3ec76b2ab6eb570c498",
+    "/js/web.js": "/js/web.js?id=fc671af1b3ebe558665a"
 }
