--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,11 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=b7a2d4028bc59d1b9bfc",
+    "/js/app.min.js": "/js/app.min.js?id=b7a2d4028bc59d1b9bfc",
+    "/css/libs.css": "/css/libs.css?id=6226f82efb9e9263a3fd",
+    "/css/libs.min.css": "/css/libs.min.css?id=6226f82efb9e9263a3fd",
+    "/js/libs.js": "/js/libs.js?id=482627720bef36ea5c53",
+    "/js/libs.min.js": "/js/libs.min.js?id=482627720bef36ea5c53",
+    "/js/app2.js": "/js/app2.js?id=cfa5e21c0fba69910bc6",
+    "/js/app2.min.js": "/js/app2.min.js?id=cfa5e21c0fba69910bc6",
+    "/js/web.js": "/js/web.js?id=fc671af1b3ebe558665a"
 }
