se implemento el panel support para el desarrollador

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,4 @@ APP_FORMAT_PASSWORD=Tecnoparque
 TEC_SUPP_TITLE='Soporte Aplicativo'
 TEC_SUPP_EMAIL=gestion@redtecnoparquecolombia.com
 TEC_SUPP_ADDRESS='Carrera. 46 #10 Sur 11 , Medellín, Antioquia'
+TEC_SUPP_RESPONSE_TIME='24 horas'
