--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,11 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=7f3440ed93c31f1e51c2",
+    "/js/app.min.js": "/js/app.min.js?id=7f3440ed93c31f1e51c2",
+    "/css/libs.css": "/css/libs.css?id=8670b1f2ea6bf26af160",
+    "/css/libs.min.css": "/css/libs.min.css?id=8670b1f2ea6bf26af160",
+    "/js/libs.js": "/js/libs.js?id=b44e18eb9c5153ff4d7f",
+    "/js/libs.min.js": "/js/libs.min.js?id=b44e18eb9c5153ff4d7f",
+    "/js/app2.js": "/js/app2.js?id=1bab898e0d478476a0be",
+    "/js/app2.min.js": "/js/app2.min.js?id=1bab898e0d478476a0be",
+    "/js/web.js": "/js/web.js?id=fc671af1b3ebe558665a"
 }
