--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,11 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=c11d2cf96a8e2f664acf",
+    "/js/app.min.js": "/js/app.min.js?id=c11d2cf96a8e2f664acf",
+    "/css/libs.css": "/css/libs.css?id=71e45da51e94f81ee387",
+    "/css/libs.min.css": "/css/libs.min.css?id=71e45da51e94f81ee387",
+    "/js/libs.js": "/js/libs.js?id=b44e18eb9c5153ff4d7f",
+    "/js/libs.min.js": "/js/libs.min.js?id=b44e18eb9c5153ff4d7f",
+    "/js/app2.js": "/js/app2.js?id=2f506af2233b021d730c",
+    "/js/app2.min.js": "/js/app2.min.js?id=2f506af2233b021d730c",
+    "/js/web.js": "/js/web.js?id=fc671af1b3ebe558665a"
 }
