--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,3 @@
 {
-    "/js/app.js": "/js/app.js?id=c933daaed418f2a693c6",
-    "/js/app.min.js": "/js/app.min.js?id=c933daaed418f2a693c6",
-    "/css/libs.css": "/css/libs.css?id=faf58d259a2ff00b6ac1",
-    "/css/libs.min.css": "/css/libs.min.css?id=faf58d259a2ff00b6ac1",
-    "/js/libs.js": "/js/libs.js?id=396183a3755b071096c1",
-    "/js/libs.min.js": "/js/libs.min.js?id=396183a3755b071096c1",
-    "/js/app2.js": "/js/app2.js?id=11e7ff00b1117933b220",
-    "/js/app2.min.js": "/js/app2.min.js?id=11e7ff00b1117933b220",
-    "/js/web.js": "/js/web.js?id=fc671af1b3ebe558665a"
+    "/js/app.js": "/js/app.js"
 }
