--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,25 @@
 {
-    "name": "tecnoparque/gestion2020",
-    "type": "project",
-    "description": "The Laravel Framework.",
+    "name": "tecnoparque/gestion2021",
+    "description": "SIRT es un sistema de información para la gestion de los procesos internos de la red Tecnoparque Colombia, basado en Laravel",
     "keywords": [
         "framework",
-        "laravel"
+        "Laravel",
+        "Sistema",
+        "SIRT",
+        "SENA"
+    ],
+    "authors": [
+        {
+            "name": "Julian Londoño Raigosa",
+            "email": "jlondono433@gmail.com"
+        },
+        {
+            "name": "Victor Manuel Moreno Vega",
+            "email": "vmmorenov@sena.edu.co"
+        }
     ],
     "license": "MIT",
+    "type": "project",
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.5",
