--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "yajra/laravel-datatables": "1.5"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
