se desarrollo los formularios para la articulacion y se cambio la trazabilidad y se incluyo campos faltantes en la migracion de articulations

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,11 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=b448f7e4c9076938864d",
+    "/js/app.min.js": "/js/app.min.js?id=b448f7e4c9076938864d",
+    "/css/libs.css": "/css/libs.css?id=184d467d1cacfdaf0659",
+    "/css/libs.min.css": "/css/libs.min.css?id=184d467d1cacfdaf0659",
+    "/js/libs.js": "/js/libs.js?id=f1d5d12d898e6c982ac8",
+    "/js/libs.min.js": "/js/libs.min.js?id=f1d5d12d898e6c982ac8",
+    "/js/app2.js": "/js/app2.js?id=b24fd80b6bf9095a1a20",
+    "/js/app2.min.js": "/js/app2.min.js?id=b24fd80b6bf9095a1a20",
+    "/js/web.js": "/js/web.js?id=941b4670d1161897e0ad"
 }
