--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18.1",
+        "axios": "^1.3.4",
         "browser-sync": "^2.27.10",
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.2.1",
-        "javascript-obfuscator": "^2.19.1",
+        "javascript-obfuscator": "^4.0.2",
         "jquery": "^3.6.1",
-        "laravel-mix": "^5.0.7",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.20",
         "materialize-css": "^1.0.0",
         "popper.js": "^1.16.1",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.54.9",
         "sass-loader": "^7.3.1",
         "vue": "^2.7.10",
         "vue-router": "^3.6.5",
         "vue-template-compiler": "^2.7.10",
-        "webpack-obfuscator": "^2.6.0"
+        "webpack-obfuscator": "^3.5.1"
     },
     "dependencies": {
+        "@babel/core": "^7.21.3",
+        "@babel/preset-env": "^7.20.2",
         "chart.js": "^2.8.0",
         "laravel-echo": "^1.14.0",
         "moment": "^2.29.4",
