se habilito la funcionalidad para descargar manuales de usuario por rol

--- a/.env.example
+++ b/.env.example
@@ -59,7 +59,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 APP_FORMAT_PASSWORD=Tecnoparque
-
+PATH_PUBLIC=''
 TEC_SUPP_TITLE='Soporte Aplicativo'
 TEC_SUPP_EMAIL=gestion@redtecnoparquecolombia.com
 TEC_SUPP_ADDRESS='Carrera. 46 #10 Sur 11 , Medellín, Antioquia'
