--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=gestion@redtecnoparquecolombia.com
-MAIL_FROM_NAME='Ana de Red Tecnoparque Colombia'
+MAIL_FROM_NAME="${APP_NAME}"
 MAIL_FROM_SUPPORT_ADDRESS=infotecnocolombia@gmail.com
 MAIL_FROM_SUPPORT_NAME='Equipo de soporte Red Tecnoparque Colombia'
 
