--- a/composer.json
+++ b/composer.json
@@ -21,24 +21,24 @@
     "license": "proprietary",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
-        "barryvdh/laravel-dompdf": "^0.8.5",
-        "doctrine/dbal": "^2.10",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
+        "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0.1",
+        "doctrine/dbal": "^3.0",
+        "laravel/framework": "^10.0",
+        "laravel/tinker": "^2.8.0",
+        "laravel/ui": "^4.2",
         "maatwebsite/excel": "^3.1",
-        "realrashid/sweet-alert": "^1.1",
-        "spatie/laravel-permission": "^2.37",
-        "tymon/jwt-auth": "^1.0.0",
-        "yajra/laravel-datatables": "1.5"
+        "realrashid/sweet-alert": "^7.1.0",
+        "spatie/laravel-permission": "^5.8",
+        "tymon/jwt-auth": "^2.0.0",
+        "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "filp/whoops": "^2.15.2",
+        "fzaninotto/faker": "^1.9.2",
+        "mockery/mockery": "^1.6.5",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0"
     },
     "config": {
         "optimize-autoloader": true,
