--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,11 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=e06c6acb8943b82dbfe3",
+    "/js/app.min.js": "/js/app.min.js?id=e06c6acb8943b82dbfe3",
+    "/css/libs.css": "/css/libs.css?id=794c018ead35c39a37bf",
+    "/css/libs.min.css": "/css/libs.min.css?id=794c018ead35c39a37bf",
+    "/js/libs.js": "/js/libs.js?id=1b68976c3f9112c9dc1b",
+    "/js/libs.min.js": "/js/libs.min.js?id=1b68976c3f9112c9dc1b",
+    "/js/app2.js": "/js/app2.js?id=8301c8a1b9b7f5717952",
+    "/js/app2.min.js": "/js/app2.min.js?id=8301c8a1b9b7f5717952",
+    "/js/web.js": "/js/web.js?id=43a9f0874e0b15a7d5d4"
 }
