--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,3 @@
 {
-    "/js/app.js": "/js/app.js?id=604a7f01c398af6ba356",
-    "/js/app.min.js": "/js/app.min.js?id=604a7f01c398af6ba356",
-    "/css/libs.css": "/css/libs.css?id=087fcd6323a8c4d87247",
-    "/css/libs.min.css": "/css/libs.min.css?id=087fcd6323a8c4d87247",
-    "/js/libs.js": "/js/libs.js?id=92203340976f691f62fc",
-    "/js/libs.min.js": "/js/libs.min.js?id=92203340976f691f62fc",
-    "/js/app2.js": "/js/app2.js?id=96fefe22a1c52c81571b",
-    "/js/app2.min.js": "/js/app2.min.js?id=96fefe22a1c52c81571b",
-    "/js/web.js": "/js/web.js?id=43a9f0874e0b15a7d5d4"
+    "/js/app.js": "/js/app.js"
 }
