--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,3 @@
 {
-    "/js/app.js": "/js/app.js?id=0eab5b24834024f82a47",
-    "/js/app.min.js": "/js/app.min.js?id=0eab5b24834024f82a47",
-    "/css/libs.css": "/css/libs.css?id=794c018ead35c39a37bf",
-    "/css/libs.min.css": "/css/libs.min.css?id=794c018ead35c39a37bf",
-    "/js/libs.js": "/js/libs.js?id=1b68976c3f9112c9dc1b",
-    "/js/libs.min.js": "/js/libs.min.js?id=1b68976c3f9112c9dc1b",
-    "/js/app2.js": "/js/app2.js?id=c718add2057d842b216c",
-    "/js/app2.min.js": "/js/app2.min.js?id=c718add2057d842b216c",
-    "/js/web.js": "/js/web.js?id=43a9f0874e0b15a7d5d4"
+    "/js/app.js": "/js/app.js"
 }
