--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "cross-env": "^5.2.1",
         "javascript-obfuscator": "^2.19.1",
         "jquery": "^3.6.1",
-        "laravel-mix": "^5.0.7",
         "lodash": "^4.17.20",
         "materialize-css": "^1.0.0",
         "popper.js": "^1.16.1",
@@ -31,10 +30,13 @@
     "dependencies": {
         "chart.js": "^2.8.0",
         "laravel-echo": "^1.14.0",
+        "laravel-mix": "^6.0.49",
         "moment": "^2.29.4",
         "pusher-js": "^4.4.0",
         "select2": "^4.0.13",
         "toastr": "^2.1.4",
-        "vuex": "^3.6.2"
+        "vuex": "^3.6.2",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4"
     }
 }
