--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,11 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=fc3e79d5d0d682b29cd45c339359e9ab",
+    "/js/app.min.js": "/js/app.min.js?id=fc3e79d5d0d682b29cd45c339359e9ab",
+    "/css/libs.css": "/css/libs.css?id=087fcd6323a8c4d87247dfcf8d630719",
+    "/css/libs.min.css": "/css/libs.min.css?id=087fcd6323a8c4d87247dfcf8d630719",
+    "/js/libs.js": "/js/libs.js?id=92203340976f691f62fcef411986c318",
+    "/js/libs.min.js": "/js/libs.min.js?id=92203340976f691f62fcef411986c318",
+    "/js/app2.js": "/js/app2.js?id=96d38d08865f861218dffeaa87e914b1",
+    "/js/app2.min.js": "/js/app2.min.js?id=96d38d08865f861218dffeaa87e914b1",
+    "/js/web.js": "/js/web.js?id=f437260208bc82f29cdd30c556ba6608"
 }
