--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
         "axios": "^0.18.1",
@@ -16,6 +16,7 @@
         "cross-env": "^5.2.1",
         "javascript-obfuscator": "^2.19.1",
         "jquery": "^3.6.1",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.20",
         "materialize-css": "^1.0.0",
         "popper.js": "^1.16.1",
@@ -25,18 +26,17 @@
         "vue": "^2.7.10",
         "vue-router": "^3.6.5",
         "vue-template-compiler": "^2.7.10",
+        "webpack": "^5.89.0",
         "webpack-obfuscator": "^2.6.0"
     },
     "dependencies": {
         "chart.js": "^2.8.0",
         "laravel-echo": "^1.14.0",
-        "laravel-mix": "^6.0.49",
         "moment": "^2.29.4",
         "pusher-js": "^4.4.0",
         "select2": "^4.0.13",
         "toastr": "^2.1.4",
         "vuex": "^3.6.2",
-        "webpack": "^5.89.0",
         "webpack-cli": "^5.1.4"
     }
 }
