--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,11 @@
 {
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js?id=6eab1b39d88451cbd750",
+    "/js/app.min.js": "/js/app.min.js?id=6eab1b39d88451cbd750",
+    "/css/libs.css": "/css/libs.css?id=706eea7626267c3aabb6",
+    "/css/libs.min.css": "/css/libs.min.css?id=706eea7626267c3aabb6",
+    "/js/libs.js": "/js/libs.js?id=123600855a220edcc70e",
+    "/js/libs.min.js": "/js/libs.min.js?id=123600855a220edcc70e",
+    "/js/app2.js": "/js/app2.js?id=f66fe39af4b205c730b6",
+    "/js/app2.min.js": "/js/app2.min.js?id=f66fe39af4b205c730b6",
+    "/js/web.js": "/js/web.js?id=43a9f0874e0b15a7d5d4"
 }
