--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,3 @@
 {
-    "/js/app.js": "/js/app.js?id=406b08e243de3680b3bf",
-    "/js/app.min.js": "/js/app.min.js?id=406b08e243de3680b3bf",
-    "/css/libs.css": "/css/libs.css?id=706eea7626267c3aabb6",
-    "/css/libs.min.css": "/css/libs.min.css?id=706eea7626267c3aabb6",
-    "/js/libs.js": "/js/libs.js?id=123600855a220edcc70e",
-    "/js/libs.min.js": "/js/libs.min.js?id=123600855a220edcc70e",
-    "/js/app2.js": "/js/app2.js?id=4cbdfccda7f96d7c92a9",
-    "/js/app2.min.js": "/js/app2.min.js?id=4cbdfccda7f96d7c92a9",
-    "/js/web.js": "/js/web.js?id=43a9f0874e0b15a7d5d4"
+    "/js/app.js": "/js/app.js"
 }
