--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,3 @@
 {
-    "/js/app.js": "/js/app.js?id=353778187f4855d99f48",
-    "/js/app.min.js": "/js/app.min.js?id=353778187f4855d99f48",
-    "/css/libs.css": "/css/libs.css?id=706eea7626267c3aabb6",
-    "/css/libs.min.css": "/css/libs.min.css?id=706eea7626267c3aabb6",
-    "/js/libs.js": "/js/libs.js?id=1214e879e5082a685559",
-    "/js/libs.min.js": "/js/libs.min.js?id=1214e879e5082a685559",
-    "/js/app2.js": "/js/app2.js?id=98e7254c0d4da8fecf87",
-    "/js/app2.min.js": "/js/app2.min.js?id=98e7254c0d4da8fecf87",
-    "/js/web.js": "/js/web.js?id=37e8f224ececc33dc4c2"
+    "/js/app.js": "/js/app.js"
 }
