--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,11 +1,3 @@
 {
-    "/js/app.js": "/js/app.js?id=9239eaee2282a28f4a86",
-    "/js/app.min.js": "/js/app.min.js?id=9239eaee2282a28f4a86",
-    "/css/libs.css": "/css/libs.css?id=706eea7626267c3aabb6",
-    "/css/libs.min.css": "/css/libs.min.css?id=706eea7626267c3aabb6",
-    "/js/libs.js": "/js/libs.js?id=1214e879e5082a685559",
-    "/js/libs.min.js": "/js/libs.min.js?id=1214e879e5082a685559",
-    "/js/app2.js": "/js/app2.js?id=379a6df99303bb382e9b",
-    "/js/app2.min.js": "/js/app2.min.js?id=379a6df99303bb382e9b",
-    "/js/web.js": "/js/web.js?id=37e8f224ececc33dc4c2"
+    "/js/app.js": "/js/app.js"
 }
